Fixes the overflow behavior of the annotate container

--- a/frontend/style/bootstrap/carousel.less
+++ b/frontend/style/bootstrap/carousel.less
@@ -4,6 +4,8 @@
 
 
 .carousel {
+  height: 0;
+  flex-grow: 1;
   position: relative;
   margin-bottom: @baseLineHeight;
   line-height: 1;
